<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.maniakapps.antar.firebases.MainActivity">

    <EditText
        android:id="@+id/ETemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        />
    <EditText
        android:id="@+id/ETpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/contrase_a"
        android:inputType="numberPassword"
        />
    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/registrarse"/>
    <TextView
        android:id="@+id/TVSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ya_tienes_una_cuenta_iniciar_sesi_n"
        android:layout_margin="15dp"
        android:textSize="20dp"/>
</LinearLayout>