<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DietasAdmin">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:text="@string/titulo_dieta"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/edtTitulo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/escribe_aqui" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/escribe_aqu_tu_dieta"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/edtTexto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/escribe_aqui" />

            <Button
                android:id="@+id/btnEnviar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/enviar_dieta"
                android:textSize="24sp" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ver dietas"
                android:layout_gravity="center_horizontal"
                android:textSize="24sp"
                android:id="@+id/btnDietas"
                />
        </LinearLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>